# openai-cli

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: client.rs  config.rs  main.rs
tests/: integration.rs
