[package]
name = "openai-cli"
version = "0.3.1"
edition = "2024"

[[bin]]
name = "openai"
path = "src/main.rs"

[dependencies]
arboard = "3"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wiremock = "0.6"
